# telematics-sim

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt
backend/src/: backend_main.cpp
cmake/: aarch64-rpi4.cmake
common/: CMakeLists.txt
common/include/telemetry/: async_mqtt_client.hpp  i_mqtt_client.hpp  json_utils.hpp  message.hpp  mosquitto_client.hpp  mqtt_client.hpp  mqtt_factory.hpp
common/src/: async_mqtt_client.cpp  json_utils.cpp  mosquitto_client.cpp  mqtt_client.cpp
sensor_farm/: CMakeLists.txt
sensor_farm/src/: sensor_farm_main.cpp
tcu/: CMakeLists.txt
tcu/src/: tcu_main.cpp
